Avance sur TME7 MAPSI

--- a/MAPSI/TME/tme7/tme7.ipynb
+++ b/MAPSI/TME/tme7/tme7.ipynb
@@ -80,13 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Telechargez le fichier et ouvrez le avec pickle\n",
     "import numpy as np\n",
     "import pickle as pkl\n",
+    "from icecream import ic\n",
     "\n",
     "Genome=np.load('genome.npy') # Le premier million de bp de E. coli\n",
     "Annotation=np.load('annotation.npy')# L'annotation sur le genome\n",
@@ -99,6 +100,26 @@
     "\n",
     "annotation_train=Annotation[:500000]\n",
     "annotation_test=Annotation[500000:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genome_test[0] ,annotation_test[0]"
    ]
   },
   {
@@ -159,8 +180,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**$b_{ij} = $ Proba d'observer $x_j$ sachant qu'on est dans l'état $e_i$**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,24 +197,53 @@
     "    d'un ensemble de couples (seq. d'observations, seq. d'états) \n",
     "    retourne les matrices A  B \"\"\"\n",
     "    A = np.zeros((N, N)) \n",
-    "    B = np.zeros((N, K)) \n",
+    "    B = np.zeros((N, K))\n",
     "\n",
-    "    ### votre code \n",
-    "    pass"
+    "    for i in range(1, len(allq)):\n",
+    "        # A matrice de transition des état => allq\n",
+    "        past_state = allq[i-1]\n",
+    "        present_state = allq[i]\n",
+    "        A[past_state, present_state] += 1\n",
+    "\n",
+    "        # B matrice de proba d'observer en fonction de l'état\n",
+    "        past_observation = allx[i-1]\n",
+    "        B[past_state, past_observation] +=1\n",
+    "    # Ajout de ma dernière observation non prise en compte dans la boucle ci-dessus\n",
+    "    # B[allq[-1], allx[-1]] += 1\n",
+    "\n",
+    "    # Normalisation des deux matrices\n",
+    "    A = A / np.maximum(A.sum(1).reshape(-1, 1), 1)\n",
+    "    B = B / np.maximum(B.sum(1).reshape(-1, 1), 1)\n",
+    "    return A, B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.99899016 0.00100984 0.         0.        ]\n",
+      " [0.         0.         1.         0.        ]\n",
+      " [0.         0.         0.         1.        ]\n",
+      " [0.00272284 0.99727716 0.         0.        ]]\n",
+      "[[0.24347301 0.25247284 0.2480025  0.25605165]\n",
+      " [0.24727716 0.23681872 0.34909315 0.16681097]\n",
+      " [0.28462222 0.23058695 0.20782446 0.27696637]\n",
+      " [0.1857911  0.26246354 0.29707437 0.25467098]]\n"
+     ]
+    }
+   ],
    "source": [
     "Pi = np.array([1, 0, 0, 0])\n",
     "nb_etat= 4 ## (intergénique, condon 0, codon 1, condon 2)\n",
     "nb_observation = 4 ## (A,T,C,G)\n",
-    "# A,B =learnHMM(genome_train, annotation_train, nb_etat, nb_observation)\n",
-    "# print(A)\n",
-    "# print(B)"
+    "A,B =learnHMM(genome_train, annotation_train, nb_etat, nb_observation)\n",
+    "print(A)\n",
+    "print(B)"
    ]
   },
   {
@@ -245,10 +302,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<span style=\"color: red\">Pourquoi on passe au log ?</span> Problème de floatant ? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\delta_{ij}$ = proba de la séquence d'état avant t + l'état $i$ avec l'obervation $j$ qu'on calcul par récusivité.\n",
+    "\n",
+    "$\\delta_{ij}$ à t+1 = max sur la ligne $i * A_{ij} * b_{ji}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_11225/419497796.py:21: RuntimeWarning: divide by zero encountered in log\n",
+      "  delta[:, x_0] = np.log(Pi*B[:, x_0]) # On remplis notre colonne de l'état de départ\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (1,500000) (4,4) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=24'>25</a>\u001b[0m         max_i \u001b[39m=\u001b[39m delta\u001b[39m.\u001b[39mmax(axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, keepdims\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m) \u001b[39m#.reshape()\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m         delta \u001b[39m=\u001b[39m max_i \u001b[39m*\u001b[39m A \u001b[39m*\u001b[39m B\u001b[39m.\u001b[39mT\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=26'>27</a>\u001b[0m etat_predits\u001b[39m=\u001b[39mviterbi(genome_test,Pi,A,B)\n",
+      "\u001b[1;32m/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb Cell 19\u001b[0m in \u001b[0;36mviterbi\u001b[0;34m(allx, Pi, A, B)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(allx)):\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=24'>25</a>\u001b[0m     max_i \u001b[39m=\u001b[39m delta\u001b[39m.\u001b[39mmax(axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, keepdims\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m) \u001b[39m#.reshape()\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=25'>26</a>\u001b[0m     delta \u001b[39m=\u001b[39m max_i \u001b[39m*\u001b[39;49m A \u001b[39m*\u001b[39m B\u001b[39m.\u001b[39mT\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (1,500000) (4,4) "
+     ]
+    }
+   ],
    "source": [
     "def viterbi(allx,Pi,A,B):\n",
     "    \"\"\"\n",
@@ -265,22 +359,48 @@
     "\n",
     "    \"\"\"\n",
     "    ## initialisation\n",
-    "    psi = np.zeros((len(A), len(allx))) # A = N\n",
+    "    psi = np.zeros((len(A), len(allx))) # A = N ; (nb_etat, nb_obs)\n",
     "    psi[:,0]= -1\n",
     "    delta = np.zeros((len(A), len(allx)))  # initialisation en dimension mais pas en contenu !\n",
+    "    # Initialisation en contenu de delta\n",
+    "    x_0 = allx[0]\n",
+    "    delta[:, x_0] = np.log(Pi) + np.log(B[:, x_0]) # On remplis notre colonne de l'état de départ\n",
     "    \n",
     "    ## recursion ...  (votre code )\n",
-    "    pass\n",
-    "    "
+    "    for i in range(len(allx)-1):\n",
+    "        psi = np.argmax(delta, axis=0, keepdims=True) + np.log(A)\n",
+    "        \n",
+    "        max_i = delta.max(axis=0, keepdims=True) #.reshape()\n",
+    "        delta = max_i + np.log(A) + np.log(B.T)\n",
+    "\n",
+    "    # Terminaison\n",
+    "    delta = np.max(delta, axis=0)\n",
+    "\n",
+    "    # chemin\n",
+    "    \n",
+    "    \n",
+    "    return q\n",
+    "etat_predits=viterbi(genome_test,Pi,A,B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| B[:, x_0]: array([0.24347301, 0.24727716, 0.28462222, 0.1857911 ])\n",
+      "ic| Pi: array([1, 0, 0, 0])\n",
+      "/tmp/ipykernel_11225/988658421.py:24: RuntimeWarning: divide by zero encountered in log\n",
+      "  delta = np.log(Pi*B[:, x_0])\n"
+     ]
+    }
+   ],
    "source": [
-    "# etat_predits=viterbi(genome_test,Pi,A,B)"
+    "etat_predits=viterbi(genome_test,Pi,A,B)"
    ]
   },
   {
@@ -308,6 +428,33 @@
    "metadata": {},
    "source": [
     "Vous pouvez considérer une sous partie du génome, par exemple entre 100000 et 200000. Commentez vos observations sur la qualité de la prédiction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb Cell 23\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X52sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m etat_predits[etat_predits\u001b[39m!=\u001b[39m\u001b[39m0\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X52sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m annotation_test[annotation_test\u001b[39m!=\u001b[39m\u001b[39m0\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X52sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m fig, ax \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39msubplots(figsize\u001b[39m=\u001b[39m(\u001b[39m15\u001b[39m,\u001b[39m2\u001b[39m))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "etat_predits[etat_predits!=0]=1 \n",
+    "annotation_test[annotation_test!=0]=1\n",
+    "fig, ax = plt.subplots(figsize=(15,2))\n",
+    "ax.plot(annotation_test[100000:200000], label=\"annotation\", lw=3, color=\"black\", alpha=.4)\n",
+    "ax.plot(etat_predits[100000:200000], label=\"prediction\", ls=\"--\")\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -375,7 +522,22 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt \n",
-    "\n"
+    "\n",
+    "mat_conf=create_confusion_matrix(annotation_test, etat_predits)\n",
+    "plt.imshow(mat_conf)\n",
+    "plt.colorbar()\n",
+    "ax = plt.gca();\n",
+    "\n",
+    "# Major ticks\n",
+    "ax.set_xticks(np.arange(0, 2, 1));\n",
+    "ax.set_yticks(np.arange(0, 2, 1));\n",
+    "\n",
+    "# Labels for major ticks\n",
+    "ax.set_xticklabels(['codant','intergenique']);\n",
+    "ax.set_yticklabels(['regions predites comme codantes','regions predites comme non codantes']);\n",
+    "\n",
+    "print(mat_conf)\n",
+    "plt.show()"
    ]
   },
   {
@@ -496,7 +658,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +672,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
