j'suis pas aller en BIMA et MAPSI car j'ouvre jamais mon cours anyway

--- a/BIMA/cours.tex
+++ b/BIMA/cours.tex
@@ -923,4 +923,12 @@ Diapo CCL :
 \begin{itemize}
     \item Mathilde m'a déconcentré 
 \end{itemize}
+
+
+\underline{Nouveau cours du 22/11} \\
+Je suis pas aller en cours pour réviser et parce que j'ouvre jamais ce document il sere à rien
+
+
+
+
 \end{document}
