--- a/MAPSI/Cours.tex
+++ b/MAPSI/Cours.tex
@@ -595,5 +595,7 @@ Exemple d'application :
     \item Segmentation d'image : Mais on passe en 2D :o $\rightarrow$ ca devient super dur à calculer. Idée de chaine n'est plus existante : plus de récursion. Du coup on fait des méthode approximé ou on transforme l'image en un arbre
 \end{itemize}
 
+\underline{Nouveau cours du 22/11} \\
+Je suis pas aller en cours pour réviser et parce que j'ouvre jamais ce document il sere à rien
 
 \end{document}
