--- a/LRC/cours.tex
+++ b/LRC/cours.tex
@@ -418,5 +418,13 @@ Diapo 23 : Les cartes russes
     \item 
 \end{itemize}
 
+\underline{Nouveau cours8 du 23/11} \\
+
+\section{Représentation du temps }
+\begin{itemize}
+    \item c'est assez utile de représenter le temps, sinon on peut aboutir à des boucles et des incohérence 
+    \item 
+\end{itemize}
+
 
 \end{document}
