COURS8 LRC mais tkt j'ai rien suivie comme d'hab je hais LRC

--- a/LRC/cours.tex
+++ b/LRC/cours.tex
@@ -399,7 +399,7 @@ On a des annonces publique, quel monde éliminer.
 Diapo 19 : 
 \begin{itemize}
     \item Remarque que, si il y a coopération, il y a une information plus informative
-    \item Mais c'est au delà de ce que la modèlisation nous permet de faire.
+    \item Mais c'est au delà de ce que la modélisation nous permet de faire.
 \end{itemize}
 
 Diapo 20 : Nouvelle Énigmes
