TME7 MAPSI w/ vectorised viterby w/o la Q6

--- a/MAPSI/TME/tme7/tme7.ipynb
+++ b/MAPSI/TME/tme7/tme7.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "(0, 0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,58 +347,138 @@
     "    # Initialisation en contenu de delta\n",
     "    x_0 = allx[0]\n",
     "    delta[:, x_0] = np.log(Pi) + np.log(B[:, x_0]) # On remplis notre colonne de l'état de départ\n",
-    "    \n",
-    "    ## recursion ...  (votre code )\n",
-    "    # for j in range(1, len(allx)-1):\n",
-    "    #     max_state = np.argmax(delta[:, j-1])\n",
-    "    #     psi[:, j] = max_state + np.log(A[:, max_state])\n",
     "\n",
-    "    #     i = np.max(delta[:,j-1])\n",
-    "    #     max_i = delta[i, j-1]\n",
-    "    #     delta[:, j] = max_i + np.log(A[:, i]) + np.log(B[:,allx[j]])\n",
-    "    #     print(delta[:j])\n",
-    "    #     print(psi[:j])\n",
-    "\n",
+    "    log_A = np.log(A)\n",
+    "    log_B = np.log(B)\n",
     "    for j in range(1, len(allx)):\n",
     "        for i in range(len(A)):\n",
-    "            delta[i, j] = np.max(delta[:, j-1]+np.log(A[:,i])) + np.log(B[i, allx[j]])\n",
-    "            psi[i, j] = np.argmax(delta[:, j-1]+np.log(A[:,i]))\n",
+    "            best_path_proba = delta[:, j-1] + log_A[:,i]\n",
+    "            delta[i, j] = np.max(best_path_proba) + log_B[i, allx[j]]\n",
+    "            psi[i, j] = np.argmax(best_path_proba)\n",
+    "\n",
     "    # Terminaison\n",
     "    k = np.argmax(delta[:, -1])\n",
+    "\n",
     "    # Chemin\n",
     "    q = []\n",
     "    for i in reversed(range(len(allx)-1)):\n",
     "        q.append(k)\n",
     "        k = psi[int(k), i+1]\n",
     "\n",
-    "    # q = np.zeros_like(allx)\n",
-    "    # S = np.argmax(delta[:, -1])\n",
-    "    # q[-1] = S\n",
-    "    # for i in reversed(range(len(allx)-1)):\n",
-    "    #     q[i] = psi[int(q[i+1]), i+1]\n",
     "    return np.flip(q)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "etat_predits=viterbi(genome_test,Pi,A,B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vectorised_viterbi(allx,Pi,A,B):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    allx : array (T,)\n",
+    "        Sequence d'observations.\n",
+    "    Pi: array, (K,)\n",
+    "        Distribution de probabilite initiale\n",
+    "    A : array (K, K)\n",
+    "        Matrice de transition\n",
+    "    B : array (K, M)\n",
+    "        Matrice d'emission matrix\n",
+    "\n",
+    "    \"\"\"\n",
+    "    ## initialisation\n",
+    "    psi = np.zeros((len(A), len(allx))) # A = N ; (nb_etat, nb_obs)\n",
+    "    psi[:,0]= -1\n",
+    "    delta = np.zeros((len(A), len(allx)))  # initialisation en dimension mais pas en contenu !\n",
+    "    # Initialisation en contenu de delta\n",
+    "    x_0 = allx[0]\n",
+    "    delta[:, x_0] = np.log(Pi) + np.log(B[:, x_0]) # On remplis notre colonne de l'état de départ\n",
+    "\n",
+    "    log_A = np.log(A)\n",
+    "    log_B = np.log(B)\n",
+    "    for j in range(1, len(allx)):\n",
+    "        best_path_proba = np.column_stack([delta[: ,j-1]]*4) + log_A\n",
+    "        delta[:, j] = np.max(best_path_proba, axis=0) + log_B[:, allx[j]]\n",
+    "        psi[:, j] = np.argmax(best_path_proba, axis=0)\n",
+    "\n",
+    "    # Terminaison\n",
+    "    k = np.argmax(delta[:, -1])\n",
+    "\n",
+    "    # Chemin\n",
+    "    q = []\n",
+    "    for i in reversed(range(len(allx)-1)):\n",
+    "        q.append(k)\n",
+    "        k = psi[int(k), i+1]\n",
+    "\n",
+    "    return np.flip(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "etat_predits=vectorised_viterbi(genome_test,Pi,A,B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**J'ai vectorisé Viterby!!! 🎉🎉🎉🎉**\n",
+    "\n",
+    "**Ca vas littéralement deux fois plus vite :o**\n",
+    "\n",
+    "**Voilà le trics sur la matrice pour calculer vite delta**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_13555/3865614763.py:21: RuntimeWarning: divide by zero encountered in log\n",
-      "  delta[:, x_0] = np.log(Pi) + np.log(B[:, x_0]) # On remplis notre colonne de l'état de départ\n",
-      "/tmp/ipykernel_13555/3865614763.py:36: RuntimeWarning: divide by zero encountered in log\n",
-      "  delta[i, j] = np.max(delta[:, j-1]+np.log(A[:,i])) + np.log(B[i, allx[j]])\n",
-      "/tmp/ipykernel_13555/3865614763.py:37: RuntimeWarning: divide by zero encountered in log\n",
-      "  psi[i, j] = np.argmax(delta[:, j-1]+np.log(A[:,i]))\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([['d1+1,1', 'd1+1,2', 'd1+1,3', 'd1+1,4'],\n",
+       "       ['d2+2,1', 'd2+2,2', 'd2+2,3', 'd2+2,4'],\n",
+       "       ['d3+3,1', 'd3+3,2', 'd3+3,3', 'd3+3,4'],\n",
+       "       ['d4+4,1', 'd4+4,2', 'd4+4,3', 'd4+4,4']], dtype=object)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "etat_predits=viterbi(genome_test,Pi,A,B)"
+    "x = np.array(['d1+', 'd2+', 'd3+', 'd4+'], dtype=object)\n",
+    "A = np.array(\n",
+    "    [['1,1', '1,2', '1,3', '1,4'],\n",
+    "    ['2,1', '2,2', '2,3', '2,4'],\n",
+    "    ['3,1', '3,2', '3,3', '3,4'],\n",
+    "    ['4,1', '4,2', '4,3', '4,4']], dtype=object\n",
+    ")\n",
+    "np.column_stack([x]*4) + A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(la prochaine fois j'essayerai d'abord de comprendre l'algo avant de vouloir le vectoriser 💀)"
    ]
   },
   {
@@ -420,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,17 +722,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([2, 2, 2, 0, 3, 3, 2, 3, 2, 0, 2, 2, 2, 3, 3],\n",
-       " [0, 3, 3, 3, 0, 1, 1, 3, 1, 3, 0, 3, 3, 3, 1])"
+       "([2, 2, 2, 1, 3, 1, 0, 3, 1, 0, 3, 2, 3, 3, 2],\n",
+       " [0, 3, 3, 3, 2, 1, 2, 0, 1, 2, 0, 1, 3, 1, 1])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,6 +805,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Les 12 états : \n",
+    "1) inter \n",
+    "2) codon 1\n",
+    "3) codon 2\n",
+    "4) codon 3\n",
+    "5) codon stop 1\n",
+    "6) codon stop 2\n",
+    "7) codon stop 3\n",
+    "8) codon start 1\n",
+    "9) codon start 2\n",
+    "10) codon start 3\n",
+    "11) codon start 3\n",
+    "12) codon start 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.24347301, 0.25247284, 0.2480025 , 0.25605165],\n",
+       "       [0.24727716, 0.23681872, 0.34909315, 0.16681097],\n",
+       "       [0.28462222, 0.23058695, 0.20782446, 0.27696637],\n",
+       "       [0.1857911 , 0.26246354, 0.29707437, 0.25467098]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.99899016, 0.00100984, 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 1.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 1.        ],\n",
+       "       [0.00272284, 0.99727716, 0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb Cell 34\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m Pi2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m ])  \u001b[39m##on commence encore dans l'intergenique\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m A2 \u001b[39m=\u001b[39m  np\u001b[39m.\u001b[39marray([[\u001b[39m1\u001b[39m\u001b[39m-\u001b[39ma, a, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m ],\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m                 [\u001b[39m0\u001b[39m  , \u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m ],\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m                   \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m ])\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m B2 \u001b[39m=\u001b[39m \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Pi2 = np.array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ])  ##on commence encore dans l'intergenique\n",
+    "A2 =  np.array([[1-a, a, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],\n",
+    "                [0  , 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0 ],\n",
+    "                  ... ])\n",
+    "B2 = ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Évaluez les performances du nouveau modèle en faisant de nouvelles predictions d'annotation pour genome_test, et comparez les avec le modèle précédent. \n",
     "```\n",
     "etat_predits2=viterbi(genome_test,Pi2,A2,B2)\n",
@@ -744,9 +944,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'viterbi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb Cell 36\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X46sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m etat_predits2\u001b[39m=\u001b[39mviterbi(genome_test,Pi2,A2,B2)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X46sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m etat_predits2[etat_predits2\u001b[39m!=\u001b[39m\u001b[39m0\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/charles/M1-S1-DAC/MAPSI/TME/tme7/tme7.ipynb#X46sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m fig, ax \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39msubplots(figsize\u001b[39m=\u001b[39m(\u001b[39m15\u001b[39m,\u001b[39m2\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'viterbi' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "etat_predits2=viterbi(genome_test,Pi2,A2,B2)\n",
+    "etat_predits2=vectorised_viterbi(genome_test,Pi2,A2,B2)\n",
     "etat_predits2[etat_predits2!=0]=1 \n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15,2))\n",
@@ -757,6 +969,13 @@
     "plt.legend(loc=\"best\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
