--- a/SIGNAL/fiche_formule.tex
+++ b/SIGNAL/fiche_formule.tex
@@ -58,5 +58,32 @@ Diapo 11 :
     f(t) \delta (t - t_0) = f(t_0) \delta (t - t_0)
 .\]
 
+Diapo 30 : def de la TF 
+\[
+    X(f) = TF\{x(t)\} = \int_{-\infty }^{+\infty }x(t)e^{-j2 \pi ft}dt
+.\]
+TF inverse 
+\[
+    x(t) = TF^{-1} \{X(f)\} = \int_{-\infty }^{+\infty } X(f) e^{+j2 \pi ft}dt
+.\]
+
+
+Diapo 31 : plusieurs prop sur la TF
+
+Diapo 52 : Dérivé et TF
+\[
+    TF\{x^{(n)}\} = (j2 \pi f)^n X(f)
+.\]
+TF et convolution 
+
+\[
+    TF\{x(t) \star y(t)\} = X(f) * Y(f)
+.\]
+
+\[
+    TF\{x(t) * y(t)\} = X(f) \star Y(f)
+.\]
+
+
 
 \end{document}
